--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,21 @@
-#capture{
-    text-align: center;
-}
-
-li {
-    display: block;
+img{
+      width: 200px;
+      height: 200px;
   }
- 
-  img{
-    width: 200px;
-    height: 200px;
-}
-.badge
-{
-    width: 500px;
-    height: 500px;
-}
-
+#badge
+  {
+      width: 500px;
+      height: 400px;
+  }
+#video
+  {
+   border: 10px groove;
+   padding: 10px;
+   width: 500px;
+   height: 500px;
+   border-radius: 8px;
+  }
+  
 .camera {
     width: 100%;
 }
@@ -40,17 +40,10 @@ li {
     width: 250px;
 }
 
-#imagefilter{
-    position: relative;
-    width: 400px;
-    height: 300px;
-    margin: auto;
-}
-
- #img_filter{
-     position: absolute;
-     top: 50px;
-     left: 10px;
+#img_filter{
+     position: relative;
+     top: 400px;
+     left: 0px;
      display: flex;
      width: 150px;
      height: 150px;
@@ -58,65 +51,23 @@ li {
 
 .take-pic .sticker {
     padding: 5px;
-    border-bottom: 1px solid #44444478;
+    border-bottom: 2px solid #44444478;
     text-align: center;
 }
-
-
-.detailBox {
-    width:320px;
-    border:1px solid #bbb;
-    margin:50px;
-}
-.titleBox {
-    background-color:#fdfdfd;
-    padding:10px;
-}
-.titleBox label{
-  color:#444;
-  margin:0;
-  display:inline-block;
+#scroll
+{
+    width: 400px;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
-.commentBox {
-    padding:10px;
-    border-top:1px dotted #bbb;
-}
-.commentBox .form-group:first-child, .actionBox .form-group:first-child {
-    width:80%;
-}
-.commentBox .form-group:nth-child(2), .actionBox .form-group:nth-child(2) {
-    width:18%;
-}
-.actionBox .form-group * {
-    width:100%;
-}
-.taskDescription {
-    margin-top:10px 0;
-}
-.commentList {
-    padding:0;
-    list-style:none;
-    max-height:100px;
-    max-width: 100px;
-    overflow:auto;
-}
-.commentList li {
-    margin:0;
-    margin-top:10px;
-}
-.commentList li > div {
-    display:table-cell;
+
+#imagefilter
+{
+    position:relative;
 }
 
-.commentText p {
-    margin:0;
-}
-.sub-text {
-    color:#aaa;
-    font-family:verdana;
-    font-size:11px;
-}
+
 .actionBox {
     border-top:1px dotted rgb(184, 164, 164);
     padding:10px;
@@ -126,11 +77,7 @@ h6
     font-family: monospace;
 
 }
-nav
-{
-    height: auto;
-    width: auto;
-}
+
 
 .register .input {
     border-radius: 0 .25rem .25rem 0;
@@ -167,42 +114,6 @@ nav
 .take-pic .preview {
     position: relative;
     text-align: center;
-}
-
-.footer
-{
-    color: #ffff;
-    background-color: #151414;
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
-}
-.footer-social-link ul
-{
-    padding: 0;
-}
-.footer-social-link ul li {
-    margin-right: 15px;
-}
-
-.footer-info-text {
-    text-align: center;
-    margin-top: 20px;
-}
-.dk-footer-box-info {
-    background-color: #1f1f1f;
-    padding: 40px;
-}
-
-.copyright-menu ul li {
-    margin-right: 15px;
-}
-
-.copyright {
-    padding: 10px;
-    margin-top: 10px;
-    background-color: #1f1f1f;
 }
 
 
