--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ img{
   }
 #video
   {
-   border: 10px groove;
+   border: 10px goldenrod groove;
    padding: 10px;
    width: 500px;
    height: 500px;
@@ -44,14 +44,14 @@ img{
      position: relative;
      top: 400px;
      left: 0px;
-     display: flex;
+  
      width: 150px;
      height: 150px;
 }
 
 .take-pic .sticker {
     padding: 5px;
-    border-bottom: 2px solid #44444478;
+    
     text-align: center;
 }
 #scroll
