--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
-
+#capture{
+    text-align: center;
+}
 
 li {
     display: block;
@@ -40,7 +42,14 @@ img{
     margin: auto;
 }
 
-
+ #img_filter{
+     position: absolute;
+     top: 50px;
+     left: 10px;
+     display: flex;
+     width: 150px;
+     height: 150px;
+}
 
 .take-pic .sticker {
     padding: 5px;
@@ -71,7 +80,33 @@ img{
 .commentBox .form-group:first-child, .actionBox .form-group:first-child {
     width:80%;
 }
+.commentBox .form-group:nth-child(2), .actionBox .form-group:nth-child(2) {
+    width:18%;
+}
+.actionBox .form-group * {
+    width:100%;
+}
+.taskDescription {
+    margin-top:10px 0;
+}
+.commentList {
+    padding:0;
+    list-style:none;
+    max-height:100px;
+    max-width: 100px;
+    overflow:auto;
+}
+.commentList li {
+    margin:0;
+    margin-top:10px;
+}
+.commentList li > div {
+    display:table-cell;
+}
 
+.commentText p {
+    margin:0;
+}
 .sub-text {
     color:#aaa;
     font-family:verdana;
@@ -125,3 +160,54 @@ nav
     
 }
 
+.take-pic .preview {
+    position: relative;
+    text-align: center;
+}
+
+
+
+
+
+/* The heart of the matter */
+.testimonial-group > .row {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  .testimonial-group > .row > .col-xs-4 {
+    display: inline-block;
+    float: none;
+  }
+  
+  /* Decorations */
+  .col-xs-4 { color: #fff; font-size: 48px; padding-bottom: 20px; padding-top: 18px; }
+  .col-xs-4:nth-child(3n+2) { background: #9c6; }
+  .col-xs-4:nth-child(3n+3) { background: #69c; }
+
+
+
+  #snap{
+    background-color: rgb(160, 156, 156) ;
+  }
+  #retake{
+    background-color: coral ;
+  
+  }
+  
+  #close{
+    background-color: lightcoral ;
+  
+  }
+
+/*
+  #counter {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    transition: 1s;
+    font-size: 0vw;
+    opacity: 50%;
+    color: gold; 
+  }*/
