--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -9,44 +9,36 @@
     text-align:center;
     display:inline-table;
     list-style:none;
+    border-radius: 10%;
     position:relative;
     border:solid 12px #fff;
     background:#fff;
     box-shadow:0 0 15px 0px #555;
-    transition:all 1s ease;
-    -o-transition:all 1s ease;
-    -moz-transition:all 1s ease;
-    -webkit-transition:all 1s ease;
+    transition:all 0.5s ease;
+    -o-transition:all 0.5s ease;
+    -moz-transition:all 0.5s ease;
+    -webkit-transition:all 0.5s ease;
     top:20px;
   }
   
   
   #profile:hover{
     top:0px;
-    opacity:1;
+    opacity:2;
   }
   
-  #profile:nth-child(1){
-      transform:rotate(0deg);
-  }
+
   
-  #profile:nth-child(2){
-      transform:rotate(0deg);
-  }
-  
-  #profile:nth-child(3){
-      transform:rotate(0deg);
-  }
-  
-  #profile:nth-child(4){
-      transform:rotate(0deg);
-  }
-  
+.jumbotron {
+	
+	background-image: linear-gradient(#8b9da9, #fff6e4);
+ box-shadow: inset 0 0 100px hsla(0,0%,0%,.3);
+}
  
   
   .light{
     border-radius:50%;
-    position: relative;;
+    position: relative;
     left:0;
     right:0;
     width:700px;
@@ -56,6 +48,8 @@
     opacity:0.3;
     pointer-events:none;
   }
+
+  
 
 
 
