--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,4 @@
-#capture{
-    text-align: center;
-}
+
 #svg
 {
     width: 200px;
@@ -11,10 +9,11 @@
     width: 100px;
     height: 100px;
 }
-
-li {
+li
+{
+    
     display: block;
-  }
+}
 
 h6
 {
@@ -68,7 +67,8 @@ nav
 
 
 body {
-    background: #eee linear-gradient(135deg, #2980b9, #9b59b6);
+    background-image: linear-gradient(#8b9da9, #fff6e4);
+ box-shadow: inset 0 0 100px hsla(0,0%,0%,.3);
     
     align-items: center;
     justify-content: center;
