--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@ nav
 #video
 {
     border-style: solid;
+    border-color: 0 0 0 2em rgba(#fff,0);;
     border-radius: 5%;
 }
 
@@ -64,6 +65,15 @@ nav
     float: none;
 }
 /* Decorations */
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    background: #C6FFDD;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  }
 
 
 
