--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,4 +67,11 @@ body{
   }
 
 
+.input-group-text {
+  border-radius: .25rem 0 0 .25em;
+}
 
+
+input.input.form-control.bg-white.border-md.border-left-0.pl-3 {
+    border-radius: 0 .25rem .25em 0;
+}
