--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,7 @@ h6
 /* Decorations */
 body{
 
-    background:linear-gradient(to bottom right,#2CCABA, #1EC68D));
+  background-image: linear-gradient(to right,#2D728F, #E2C2FF);
   
   }
 
