--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,11 +60,24 @@ h6
     float: none;
 }
 /* Decorations */
-body{
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    background-repeat: inherit;
+    animation: gradient 15s ease infinite;
+}
 
-  background-image: linear-gradient(to right,#2D728F, #E2C2FF);
-  
-  }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 .input-group-text {
   border-radius: .25rem 0 0 .25em;
